@@ -26,26 +26,29 @@ import org.apache.gora.avro.store.DataFileAvroStore;
 import org.apache.gora.mock.persistency.MockPersistent;
 import org.apache.gora.mock.store.MockDataStore;
 import org.apache.gora.util.GoraException;
+import org.apache.hadoop.conf.Configuration;
 import org.junit.Before;
 import org.junit.Test;
 
 public class TestDataStoreFactory {
+  private Configuration conf;
   
   @Before
   public void setUp() {
+    conf = new Configuration();
   }
 
   @Test
   public void testGetDataStore() throws GoraException {
     DataStore<?,?> dataStore = DataStoreFactory.getDataStore("org.apache.gora.mock.store.MockDataStore"
-        , String.class, MockPersistent.class);
+        , String.class, MockPersistent.class, conf);
     Assert.assertNotNull(dataStore);
   }
   
   @Test
   public void testGetClasses() throws GoraException {
     DataStore<?,?> dataStore = DataStoreFactory.getDataStore("org.apache.gora.mock.store.MockDataStore"
-        , String.class, MockPersistent.class);
+        , String.class, MockPersistent.class, conf);
     Assert.assertNotNull(dataStore);
     Assert.assertEquals(String.class, dataStore.getKeyClass());
     Assert.assertEquals(MockPersistent.class, dataStore.getPersistentClass());
@@ -54,18 +57,18 @@ public class TestDataStoreFactory {
   @Test
   public void testGetDataStore2() throws GoraException {
     DataStore<?,?> dataStore = DataStoreFactory.getDataStore(MockDataStore.class
-        , String.class, MockPersistent.class);
+        , String.class, MockPersistent.class, conf);
     Assert.assertNotNull(dataStore);
   }
   
   @Test
   public void testGetDataStore3() throws GoraException {
     DataStore<?,?> dataStore1 = DataStoreFactory.getDataStore("org.apache.gora.mock.store.MockDataStore"
-        , Object.class, MockPersistent.class);
+        , Object.class, MockPersistent.class, conf);
     DataStore<?,?> dataStore2 = DataStoreFactory.getDataStore("org.apache.gora.mock.store.MockDataStore"
-        , Object.class, MockPersistent.class);
+        , Object.class, MockPersistent.class, conf);
     DataStore<?,?> dataStore3 = DataStoreFactory.getDataStore("org.apache.gora.mock.store.MockDataStore"
-        , String.class, MockPersistent.class);
+        , String.class, MockPersistent.class, conf);
     
     Assert.assertTrue(dataStore1 == dataStore2);
     Assert.assertNotSame(dataStore1, dataStore3);
@@ -74,7 +77,8 @@ public class TestDataStoreFactory {
   @Test
   public void testReadProperties() throws GoraException{
     //indirect testing
-    DataStore<?,?> dataStore = DataStoreFactory.getDataStore(String.class, MockPersistent.class);
+    DataStore<?,?> dataStore = DataStoreFactory.getDataStore(String.class,
+            MockPersistent.class, conf);
     Assert.assertNotNull(dataStore);
     Assert.assertEquals(MockDataStore.class, dataStore.getClass());
   }
