@@ -20,7 +20,7 @@ package org.apache.gora.hbase;
 
 import org.apache.gora.GoraTestDriver;
 import org.apache.gora.hbase.store.HBaseStore;
-import org.apache.hadoop.hbase.HBaseConfiguration;
+import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.hbase.HBaseTestingUtility;
 import org.apache.hadoop.hbase.HTableDescriptor;
 import org.apache.hadoop.hbase.client.HBaseAdmin;
@@ -74,8 +74,8 @@ public class GoraHBaseTestDriver extends GoraTestDriver {
     }
   }
   
-  public HBaseConfiguration getConf() {
-      return (HBaseConfiguration)hbaseUtil.getConfiguration();
+  public Configuration  getConf() {
+      return hbaseUtil.getConfiguration();
   }
   
   public HBaseTestingUtility getHbaseUtil() {
