@@ -2,6 +2,8 @@ Gora Change Log
 
 Trunk (unreleased changes):
 
+* GORA-26. Configurable classes should pass around Configuration consistently (ab via mattmann)
+
 * GORA-32. Map type with long values generates non-compilable Java class (Yves Langisch)
 
 * GORA-29. Gora maven support (Ioannis Canellos via mattmann)
